MMA-1418 Endret til å bruke Begrenset objekt for filtering av begrensede journalposter og lagt til masse tester